Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -154,7 +154,7 @@
     "banking-movements": "Bankovní pohyby",
     "barcode": "Código de barras",
     "bcc": "CCO",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Staňte se sponzorem",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
@@ -202,7 +202,7 @@
     "cant-delete-default-tax": "No se puede eliminar el impuesto predeterminado",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
     "cant-delete-last-user": "No se puede eliminar al último usuario",
-    "cant-delete-variant-with-documents": "Produkt nebo varianta %reference% nelze smazat, protože již byl zakoupen nebo prodán. Ale můžete jej uzamknout, pokud chcete.",
+    "cant-delete-variant-with-documents": "Produkt nebo varianta %reference% nelze smazat, protože již byl zakoupen nebo prodán. Ale můžete jej zablokovat, pokud chcete.",
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "No se puede eliminar el asiento",
@@ -1262,8 +1262,8 @@
     "refund-payment-concept": "Vrácení platebního dokladu %document%",
     "refunds": "Devoluciones",
     "register": "Registrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad": "Registrovat instalaci FacturaScripts",
+    "register-install-ad-p": "Pokud zaregistrujete instalaci FacturaScripts, získáte 1 měsíc PRO sponzorství, které vám umožní stáhnout jeden z našich exkluzivních pluginů. Navíc nám to pomůže získat statistiky verzí jádra a PHP.",
     "register-installation": "Registrar instalación",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
@@ -1278,7 +1278,7 @@
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar",
-    "removing-logs-until": "Odstraňují se záznamy až do %date%",
+    "removing-logs-until": "Odstraňování záznamů až do %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Asientos",
@@ -1387,7 +1387,7 @@
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Mostrar precio en la impresión",
     "show-quantity": "Mostrar cantidad en la impresión",
-    "show-section-new": "Zobrazit novou sekci",
+    "show-section-new": "Zobrazit sekci pro vytvoření",
     "signature": "Firma",
     "simple": "Simple",
     "simplified": "Zjednodušený",
