--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -154,7 +154,7 @@
     "banking-movements": "Bankbewegungen",
     "barcode": "Strichcode",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Werde Sponsoren",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
@@ -909,7 +909,7 @@
     "long": "Lange",
     "longitude": "Längengrad",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Nach Lücken suchen",
     "lot": "Menge",
     "low-security": "Niedrige Sicherheit",
     "machine": "Maschine",
@@ -973,7 +973,7 @@
     "month-12": "Dezember",
     "month-2": "Febrero",
     "month-3": "März",
-    "month-4": "Abril",
+    "month-4": "April",
     "month-5": "Mai",
     "month-6": "Juni",
     "month-7": "Juli",
@@ -1027,7 +1027,7 @@
     "non-editable-columns": "non-editable-columns",
     "non-editable-document": "Non editable document",
     "none": "Keine",
-    "normal": "normal",
+    "normal": "Normal",
     "not-allowed-delete": "not-allowed-delete",
     "not-allowed-modify": "Sie haben keine Berechtigung zum Ändern",
     "not-enough-stock": "not-enough-stock",
@@ -1088,7 +1088,7 @@
     "page": "Seite",
     "page-break": "Salto de página",
     "page-configuration": "Seiteneinstellung",
-    "page-not-found": "Página no encontrada",
+    "page-not-found": "Seite nicht gefunden",
     "page-not-found-p": "Die gesuchte Seite wurde nicht gefunden.",
     "page-option-info": "Von hier aus können Sie die sichtbaren Felder in dieser Liste oder Formular ändern",
     "page-total-amount": "Gesamt Seite",
@@ -1142,7 +1142,7 @@
     "php-extension-not-found": "Sie haben die PHP-Erweiterung %extension% nicht installiert.",
     "php-support-end": "PHP-Endsupport",
     "physical-stock": "Physischer Bestand",
-    "picking": "P",
+    "picking": "Kommissionierung",
     "plan": "Planen",
     "please-enter-value": "Bitte einen Wert eingeben",
     "plugin": "Plugin",
@@ -1224,7 +1224,7 @@
     "pvptotal-line-error": "Fehler im pvptotal Wert der Zeile 0 des Dokuments. Richtiger Wert: 1",
     "quantity": "Menge",
     "quantity-abb": "quantity-abb",
-    "quantity-remaining": "Cantidad restante",
+    "quantity-remaining": "Verbleibende Menge",
     "quantity-served": "quantity-served",
     "quantity-sold": "quantity-sold",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
@@ -1274,7 +1274,7 @@
     "rejected": "abgelehnt",
     "related": "verbunden",
     "related-subaccount-bank-charges": "Zugehöriges Unterkonto für Bankgebühren (Provisionen, etc.)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-purchases-sales": "Zugehöriges Unterkonto für Käufe und Verkäufe",
     "reloading": "Neuladen",
     "remove-filter": "Filter löschen",
     "remove-from-list": "Löschen",
@@ -1387,7 +1387,7 @@
     "show-pending-remittances": "Zeige ausstehende Überweisungen",
     "show-price": "Show price on print",
     "show-quantity": "Show quantity on print",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Neuen Abschnitt anzeigen",
     "signature": "Unterschrift",
     "simple": "Einfach",
     "simplified": "Vereinfacht",
@@ -1399,7 +1399,7 @@
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Sozialversicherungsnummer",
     "sort": "Order",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Nach Spalte sortieren",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
@@ -1412,7 +1412,7 @@
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "special-accounts",
     "specials-actions": "Specials Actions",
-    "spreadsheet-xls": "XLS-Datei",
+    "spreadsheet-xls": "Excel-Datei",
     "standard": "Standard",
     "start": "Start",
     "start-date": "Anfangsdatum",
@@ -1440,7 +1440,7 @@
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Unterkonto 0 gehört zu einem anderen Geschäftsjahr.",
     "subaccount-irpf": "Konto für Abzüge",
-    "subaccount-irpf-creditor": "subaccount-irpf-creditor",
+    "subaccount-irpf-creditor": "Unterkonto für Einkaufsabzüge",
     "subaccount-not-found": "Unterkonto 0 wurde nicht gefunden.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "Teil-Konto für Gewinn- und Verlustrechnung nicht gefunden",
@@ -1529,7 +1529,7 @@
     "ticket": "Ticket",
     "tickets": "T",
     "time": "Zeit",
-    "timezone": "Wähle Zeitzone aus",
+    "timezone": "Zeitzone",
     "title": "Titel",
     "title-font-size": "t",
     "title-url": "Title URL",
@@ -1539,7 +1539,7 @@
     "today": "Heute",
     "total": "Gesamt",
     "total-amount": "total-amount",
-    "total-cost": "total-cost",
+    "total-cost": "Gesamtkosten",
     "total-purchases": "total-purchases",
     "total-sales": "Gesamtverkäufe",
     "total-value-error": "Gesamtmenge von 0 1 falsch (2). Richtige Menge: 3",
@@ -1632,7 +1632,7 @@
     "view-api": "API anzeigen",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "Ver presupuesto",
-    "view-order": "Ver pedido",
+    "view-order": "Bestellung anzeigen",
     "warehouse": "Warenhaus",
     "warehouse-cant-be-same": "Das Ursprungs- und das Ziellager können nicht identisch sein.",
     "warehouse-must-be-same-business": "Ursprungs- und Ziellager müssen von derselben Firma sein",
@@ -1661,7 +1661,7 @@
     "work-events": "Eventos de trabajo",
     "working-hours": "Arbeitszeit",
     "works": "Trabajos",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "write-a-message-here": "Schreibe eine Nachricht hier",
     "x-column": "Spalte X",
     "x-operation": "Operation X",
     "y-column": "Spalte Y",
@@ -1680,6 +1680,6 @@
     "you-should-change-passwd": "Sie sollten Ihr Password ändern",
     "your": "Ihr",
     "zip-code": "Postleitzahl",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Postleitzahlen",
     "zip-error-wrong-structure": "zip Fehler falsche Struktur"
 }
