--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -476,7 +476,7 @@
     "document-type": "Dokumentu mota",
     "document-type-valid-length": "Dokumentu mota baliogabea. 1 eta 20 karaktere artean izan behar du.",
     "document-wildcard-info": "Kontabilitate idazpenaren buruan adierazitako dokumentua",
-    "document-without-total": "Dokumentu %document% gabe totalik edo totala 0 dago.",
+    "document-without-total": "Dokumentu %document% gabe totalik edo totala 0 dela.",
     "documentation": "Dokumentazioa",
     "documents": "Documentuak",
     "documents-generated": "Dokumentuak sortuta",
@@ -524,7 +524,7 @@
     "enable-api": "APIa gaitu",
     "enable-updates-beta": "Aktibatu beta eguneraketak",
     "enabled": "Aktiboa",
-    "enabled-plugins": "Pluginak gaituta",
+    "enabled-plugins": "Plugin aktiboak",
     "encrypt": "Enkriptatzea",
     "end-date": "Amaiera data",
     "end-time": "Amaierako ordua",
@@ -624,7 +624,7 @@
     "finalize": "Bukatu",
     "find-problems": "Arazoak bilatu",
     "finished": "Amaitua",
-    "finished-cron": "FacturaScripts cron exekuzioa amaitu da, erabilitako denbora: %timeNeeded%",
+    "finished-cron": "FacturaScripts cron exekuzioa amaitu da, erabilitako denbora: %timeNeeded% segundu, Memoria: %memoryUsed%",
     "first-quarter": "Lehenengo hiruhilekoa",
     "first-steps": "Aurrenengo urratsak",
     "first-trimester": "Lehenengo hiruilekoa",
@@ -1598,7 +1598,7 @@
     "uploaded-at": "Hemen kargatua",
     "url": "Webgunea",
     "use-gaps": "Hutsuneak erabili",
-    "use-holes-invoices-esp": "Fakturatzean zabor erabilera desmugatzen baduzu eta zatira bat ezabatzen baduzu, zaborra fakturazioan geratuko da eta zeregitasun arazoa izango duzu",
+    "use-holes-invoices-esp": "Fakturatzean zabor erabilera desmarkatzen baduzu eta zatira bat ezabatzen baduzu, zaborra fakturazioan geratuko da eta zeregitasun arazoa izango duzu",
     "user": "Erabiltzailea",
     "user-and-config": "Erabiltzaile eta konfigurazioa",
     "users": "Erabiltzaileak",
