--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -154,7 +154,7 @@
     "banking-movements": "Movementos bancarios",
     "barcode": "Código de barras",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Fai-te patrocinador",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
@@ -1262,8 +1262,8 @@
     "refund-payment-concept": "Devolución do recibo %document%",
     "refunds": "Devolucións",
     "register": "Rexistrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad": "Registra a instalación de FacturaScripts",
+    "register-install-ad-p": "Se registas a instalación de FacturaScripts obterás 1 mes de patrocinio PRO, que che permite descargar un dos nosos plugins exclusivos. Ademais, axúdanos a obter estatísticas de versións do core e de PHP.",
     "register-installation": "Rexistrar instalación",
     "register-installation-p": "Rexistre a súa instalación para poder actualizar plugins de pago ou privados",
     "register-symbol": "#",
@@ -1531,7 +1531,7 @@
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
-    "title-font-size": "Tamaño fonte título",
+    "title-font-size": "Tamaño de fonte do título",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
@@ -1591,8 +1591,8 @@
     "update-time": "hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
-    "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available": "Actualizacións dispoñibles",
+    "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcións.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
