--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -143,9 +143,9 @@
     "balance": "Bilancio",
     "balance-account": "Bilancio contabile",
     "balance-account-abreviated": "Bilancio abbreviato delle aziende",
-    "balance-amounts": "Trial Balance",
+    "balance-amounts": "Prospetto di Sums e Saldi",
     "balance-sheet": "Bilancio",
-    "balance-sheets": "Balance Sheets",
+    "balance-sheets": "Bilanci",
     "balances": "Bilanci",
     "bank-account": "Conto bancario",
     "bank-accounts": "conto in banca",
@@ -327,7 +327,7 @@
     "country": "Nazione",
     "country-not-in-eu": "Il %codiso% non appartiene a nessun paese dell'Unione Europea",
     "create": "creare",
-    "create-accounting-entry": "Create Accounting Entry",
+    "create-accounting-entry": "Creare Scrittura Contabile",
     "create-delivery-note": "Creare bolla di consegna",
     "create-estimation": "Creare preventivo",
     "create-invoice": "Creare fattura",
@@ -492,7 +492,7 @@
     "downloads": "download",
     "drag": "Trascinare",
     "dto": "Disco.",
-    "dto-2": "dto-2",
+    "dto-2": "Dto. 2",
     "duplicate-record": "record duplicato",
     "duplicated-reference": "Riferimento '%reference%' duplicato",
     "duplicated-request": "richiesta duplicata",
@@ -601,7 +601,7 @@
     "family-code": "Codice famiglia",
     "fax": "Fax",
     "february": "Febbraio",
-    "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
+    "field-can-not-be-null": "Il campo %fieldName% nella tabella %tableName% non può essere nullo",
     "field-required": "Campo obbligatorio: %field%",
     "fields": "Campi",
     "file": "archivio",
@@ -694,7 +694,7 @@
     "global-dto": "Sconto complessivo",
     "global-dto-2": "DTO globale 2",
     "greater-than": "Più grande di",
-    "grid-help": "grid-help",
+    "grid-help": "Control + Invio per andare a capo. Puoi spostare o eliminare le righe facendo clic sul numero di riga.",
     "group": "Gruppo",
     "group-accounts": "Agruppa conti",
     "group-by-day": "Raggruppa per giorno",
@@ -710,7 +710,7 @@
     "group-name": "Nome del Gruppo",
     "group-or-split": "Agruppare o dividere",
     "group-or-split-p": "Questo assistente consente di generare un nuovo documento dalle righe di altri. Seleziona le quantità che desideri utilizzare, la data del nuovo documento e premi il pulsante generare.",
-    "grouping-type": "Agrupación",
+    "grouping-type": "Tipo di raggruppamento",
     "groups": "gruppi",
     "has-attachments": "ha allegati",
     "has-parent": "Ha genitore",
@@ -720,9 +720,9 @@
     "heading-account-id-root": "Radice dell'account di intestazione",
     "health": "Salute",
     "height": "Altezza",
-    "hello": "Hola",
+    "hello": "Ciao",
     "help": "aiutare",
-    "help-button-p": "Consulta la ayuda en cada pantalla",
+    "help-button-p": "Consulta l'aiuto in ogni schermata",
     "help-server-accepts-filesize": "Questo server supporta una dimensione massima di %1$s MB. Se il plugin prende il sopravvento, si sarà in grado di caricare, anche non si può lasciare nulla.",
     "hide": "Nascondi",
     "high": "Alto",
@@ -839,7 +839,7 @@
     "languages-es_GT": "Italiano",
     "languages-es_MX": "Spagnolo (Messico)",
     "languages-es_PA": "Spagnolo (Panama)",
-    "languages-es_PE": "languages-es_PE",
+    "languages-es_PE": "Spagnolo (Perù)",
     "languages-es_UY": "languages-es_UY",
     "languages-eu_ES": "languages-eu_ES",
     "languages-fr_FR": "Francese",
@@ -915,7 +915,7 @@
     "machine": "macchina",
     "machines": "machines",
     "macro-account-note-info": "Chiavi per sostituire i valori macro",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Errore nella connessione al server di posta",
     "mail-test-error": "Test dell'e-mail fallito",
     "mail-test-ok": "Test dell'e-mail completata con successo",
     "mailer": "Controllore mail",
@@ -981,14 +981,14 @@
     "month-9": "settembre",
     "month-name": "Month Name",
     "month-wildcard-info": "Mese corrente (della data corrente)",
-    "monthly": "Monthly",
+    "monthly": "Mensile",
     "monthly-payment": "Pago mensual",
     "months": "Mesi",
     "more": "Di più",
     "more-fields": "Altro campi",
     "more-plugins": "più plugin...",
     "move-lines": "Sposta linee",
-    "movements": "movements",
+    "movements": "Movimenti",
     "my-profile": "Il mio profilo",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
@@ -1127,7 +1127,7 @@
     "pending-invoices-button": "Fatture in sospeso:",
     "pending-orders-button": "Pendente di ordini:",
     "pending-reception": "ricezione in sospeso",
-    "percentage": "Percentage",
+    "percentage": "Percentuale",
     "percentage-commission": "% Provvigione",
     "percentage-discount": "Sconto percentuale",
     "percentage-surcharge": "% sovrattassa",
@@ -1202,7 +1202,7 @@
     "product": "Prodotto",
     "product-not-found": "Prodotto %ref% non trovato",
     "products": "Prodotti",
-    "profile": "Perfil",
+    "profile": "Profilo",
     "profit-and-loss": "Profitto e Perdita",
     "profit-and-loss-balance": "Bilancio dei conti economici",
     "profits": "Profitti",
@@ -1325,7 +1325,7 @@
     "save": "salvare",
     "save-data": "Salvare i dati",
     "save-filter": "Salva Filtro",
-    "sdk": "sdk",
+    "sdk": "SDK",
     "search": "Ricerca",
     "search-document": "Inserisci il numero di %doctype% per cercare.",
     "search-product": "Cerca prodotto",
@@ -1413,7 +1413,7 @@
     "special-accounts": "conti speciali",
     "specials-actions": "Azioni speciali",
     "spreadsheet-xls": "File Excel",
-    "standard": "standard",
+    "standard": "Standard",
     "start": "Inizio",
     "start-date": "Data d'inizio",
     "start-hour": "Ora di inizio",
@@ -1464,7 +1464,7 @@
     "supplier-account-not-found": "conto fornitore non trovato",
     "supplier-code": "supplier-code",
     "supplier-delivery-note": "Supplier delivery note",
-    "supplier-delivery-notes": "Supplier delivery notes",
+    "supplier-delivery-notes": "Note di consegna fornitore",
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Stime dei fornitori",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
@@ -1516,7 +1516,7 @@
     "text-color": "Colore del testo",
     "texts": "testi",
     "third-quarter": "3º trimestre",
-    "third-trimester": "Third trimester",
+    "third-trimester": "Terzo trimestre",
     "this-last-fortnight": "Ultimi 15 giorni",
     "this-last-month": "Questo ultimo mese",
     "this-last-week": "Ultima settimana",
@@ -1570,7 +1570,7 @@
     "type-warning": "Type warning",
     "unbalance": "sbilanciato",
     "unbalanced-entry": "Prenotazione non bilanciata",
-    "unchecked": "unchecked",
+    "unchecked": "Non verificato",
     "under-minimums": "under-minimums",
     "undo": "Disfare",
     "unit-profit": "unit-profit",
@@ -1588,10 +1588,10 @@
     "update": "aggiornare",
     "update-stock": "Aggiorna stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
-    "update-time": "update-time",
+    "update-time": "Orario di aggiornamento",
     "updated-model": "Aggiornato %model% (%key%) %desc%",
     "updater": "Updater",
-    "updates-available": "Actualizaciones disponibles",
+    "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
@@ -1605,7 +1605,7 @@
     "using-apc": "Utilizzo della cache APC",
     "using-filecache": "Utilizzando Filecache",
     "using-memcache": "Utilizzando Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Valido per un giorno",
     "validate": "validate",
     "validate-iban": "Validare IBAN",
     "valuation-type": "Tipo di valutazione",
@@ -1635,7 +1635,7 @@
     "view-order": "Visualizza ordine",
     "warehouse": "Magazzino",
     "warehouse-cant-be-same": "Il magazzino di origine e destinazione non può essere lo stesso.",
-    "warehouse-must-be-same-business": "warehouse-can-be-same-business",
+    "warehouse-must-be-same-business": "I magazzini di origine e di destinazione devono appartenere alla stessa azienda",
     "warehouses": "magazzini",
     "warning": "Attenzione",
     "warnings": "Avisos",
