--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -22,7 +22,7 @@
     "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
     "account-parent-error": "La cuenta padre es incorrecta o no pertenece al ejercicio",
     "accounting": "Contabilidad",
-    "accounting-accounts": "Cuentas contables",
+    "accounting-accounts": "Konta księgowe",
     "accounting-balance": "Saldo księgowe",
     "accounting-balances": "Balances",
     "accounting-concept": "Concepto contable",
@@ -80,7 +80,7 @@
     "allow-delete": "Permitir eliminar",
     "allow-delete-data": "Permitir BORRADO",
     "allow-export": "Permitir exportar",
-    "allow-get-data": "Permitir ACCESO",
+    "allow-get-data": "Zezwól na DOSTĘP",
     "allow-import": "Permitir importar",
     "allow-marketing": "Permite marketing",
     "allow-post-data": "Zezwól na MODYFIKACJĘ",
@@ -113,7 +113,7 @@
     "approved": "Aprobado",
     "april": "Abril",
     "are-you-sure": "Esto no se puede deshacer. ¿Está seguro que desea continuar?",
-    "are-you-sure-action": "Esta acción necesita confirmación. ¿Está seguro de que desea continuar?",
+    "are-you-sure-action": "Ta akcja wymaga potwierdzenia. Czy na pewno chcesz kontynuować?",
     "asset": "Activo",
     "assigned": "Asignado",
     "attached-file": "Archivo adjunto",
@@ -160,7 +160,7 @@
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
     "birthday": "Urodziny",
-    "block-date": "Fecha de bloqueo",
+    "block-date": "Data blokady",
     "blocked": "Zablokowany",
     "blocked-date": "Fecha de bloqueo",
     "body": "Body",
@@ -171,7 +171,7 @@
     "business-name": "Razón Social",
     "buy": "Comprar",
     "cache": "Caché",
-    "cache-dir": "Carpeta de cache '%folderName%'",
+    "cache-dir": "Folder pamięci podręcznej '%folderName%'",
     "calculate": "Calcular",
     "calculated-net-diff": "Znaleziono różnicę podczas obliczania netto. %net% VS %net2%",
     "calculated-surcharge-diff": "Znaleziono różnicę podczas obliczania opłaty równowartości. %surcharge% VS %surcharge2%",
@@ -251,7 +251,7 @@
     "closing-closing-concept": "Asiento de cierre del ejercicio %exercise%",
     "closing-opening-concept": "Asiento de apertura del ejercicio %exercise%",
     "closing-operation": "Cierre",
-    "closing-regularization-concept": "Asiento de regularización del ejercicio %exercise%",
+    "closing-regularization-concept": "Ewidencja regulacyjna roku %exercise%",
     "codbarras": "Código de barras",
     "code": "Código",
     "codiso": "Código ISO",
@@ -283,7 +283,7 @@
     "company-name": "Nombre de empresa",
     "company-warehouse": "Firma\/Magazyn",
     "comparative": "Comparativo",
-    "compared": "Comparado",
+    "compared": "Porównany",
     "compatible": "Compatible",
     "completed": "Zakończony",
     "component": "Componente",
@@ -307,7 +307,7 @@
     "control-panel-decimal-warning": "Ostrzeżenie: ta zmiana zostanie zastosowana do cen produktów, ale także do całkowitych kwot na fakturach, księgach, etc.",
     "controller": "Controlador",
     "controller-error": "Błąd kontrolera",
-    "controller-not-found": "Controlador no encontrado",
+    "controller-not-found": "Kontroler nie znaleziony",
     "conversion-rate": "Tasa de conversión a €",
     "conversion-rate-not-0": "La tasa de conversión no puede ser 0.",
     "convert-into-customer": "Convertir en cliente",
@@ -340,7 +340,7 @@
     "cron-job": "Tarea programada",
     "cron-timeout": "Cron został zatrzymany, aby nie przekroczyć maksymalnego czasu wykonania PHP. Proszę, uruchom cron z terminala, aby uniknąć tego ograniczenia.",
     "crons": "Crony",
-    "currency": "Divisa",
+    "currency": "Waluta",
     "currency-position": "Pozycja symbolu waluty",
     "current-quarter": "Bieżący kwartał",
     "current-risk": "Riesgo actual",
@@ -369,7 +369,7 @@
     "daily": "Diario",
     "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
     "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li3": "Jeśli stracisz, sformatujesz lub zniszczysz komputer, stracisz dane.",
     "dashboard": "Tablica",
     "dashboard-backup": "Kopia zapasowa",
     "dashboard-backup-p": "Przypominamy, że masz zainstalowany FacturaScripts na swoim PC, dlatego dane (faktury, klienci, itp...) są przechowywane tylko na Twoim PC. Regularnie twórz kopie zapasowe i przechowuj je z dala od komputera.",
@@ -385,12 +385,12 @@
     "date-out": "Fecha salida",
     "date-out-of-exercise-range": "La fecha está fuera del rango del ejercicio %exerciseName%",
     "date-wildcard-info": "Fecha actual (fecha del ordenador)",
-    "dateentry-wildcard-info": "Fecha indicada en la cabecera del asiento contable",
+    "dateentry-wildcard-info": "Data wskazana w nagłówku wpisu księgowego",
     "day": "Día",
     "days": "Días",
     "days-log-retention": "Liczba dni retencji logów",
     "days-until-expiration": "Dni do wygaśnięcia",
-    "db-host": "Host base de datos",
+    "db-host": "Host bazy danych",
     "db-name": "Nazwa bazy danych",
     "db-password": "Hasło do bazy danych",
     "db-port": "Puerto base de datos",
@@ -404,7 +404,7 @@
     "decimals": "Decimales",
     "default": "Por defecto",
     "default-customer": "Cliente predefinido",
-    "default-retention": "Retención predeterminada",
+    "default-retention": "Domyślne zatrzymanie",
     "default-role": "Grupo de usuario pred.",
     "default-tax": "Impuesto predeterminado",
     "default-to-company-email": "Por defecto al email de la empresa",
@@ -510,16 +510,16 @@
     "email-replies": "Odpowiedzi e-mail",
     "email-replies-to": "Las respuestas a este email irán a %email%",
     "email-sent": "Email enviado",
-    "email-sent-to": "Email enviado a %email%",
+    "email-sent-to": "Email wysłany do %email%",
     "email-signature": "Firma del email",
     "email-to": "Email para",
-    "emails": "Emails",
+    "emails": "Emaile",
     "emails-sent": "Emails enviados",
     "employee": "Pracownik",
     "employees": "Empleados",
     "empty": "Pusty",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
-    "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
+    "empty-ref-or-missing": "Pusta referencja lub produkt nie znaleziony",
     "enable": "Activar",
     "enable-api": "Activar API",
     "enable-updates-beta": "Włącz aktualizacje beta",
@@ -530,7 +530,7 @@
     "end-time": "Hora finalización",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
-    "epigraphs": "Epígrafes",
+    "epigraphs": "Epigrafy",
     "epigraphs-group": "Grupo Epígrafes",
     "equivalence": "Equivalencia",
     "equivalent-account-not-found": "Nie znaleziono konta równoważnego dla %accountCode% w ćwiczeniu %exerciseCode% Czy zaimportowałeś plan kont?",
@@ -552,7 +552,7 @@
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
+    "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
@@ -591,7 +591,7 @@
     "expiration": "Vencimiento",
     "expiration-type": "Tipo de vencimiento",
     "expired": "Caducado",
-    "expired-receipt": "Recibo vencido",
+    "expired-receipt": "Wygasły paragon",
     "export": "Exportar",
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
@@ -677,7 +677,7 @@
     "generated-agents": "Wygenerowano %quantity% agentów.",
     "generated-at": "Generado el %when%",
     "generated-contacts": "%quantity% contactos generados.",
-    "generated-customer-delivery-notes": "%quantity% albaranes de venta generados.",
+    "generated-customer-delivery-notes": "Wygenerowano %quantity% faktur sprzedaży.",
     "generated-customer-estimations": "%quantity% presupuestos de cliente generados.",
     "generated-customer-groups": "%quantity% grupos de clientes generados.",
     "generated-customer-orders": "%quantity% pedidos de cliente generados.",
@@ -696,7 +696,7 @@
     "greater-than": "Większy niż",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
     "group": "Grupa",
-    "group-accounts": "Agrupar cuentas",
+    "group-accounts": "Grupuj konta",
     "group-by-day": "Agrupar por día",
     "group-by-day-unixtime": "Grupuj według dnia (unixtime)",
     "group-by-month": "Grupuj wg miesiąca",
@@ -761,7 +761,7 @@
     "info": "Info",
     "infostate-component-title": "Informacja o stanie",
     "initial-number": "Número inicial",
-    "insert-update": "Añadir o modificar",
+    "insert-update": "Dodaj lub zmodyfikuj",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
@@ -833,13 +833,13 @@
     "languages-es_CL": "Espanol (Chile)",
     "languages-es_CO": "Español (Colombia)",
     "languages-es_CR": "Español (Costa Rica)",
-    "languages-es_DO": "Español (Rep. Dominicana)",
+    "languages-es_DO": "Hiszpański (Rep. Dominikana)",
     "languages-es_EC": "Hiszpański (Ekwador)",
     "languages-es_ES": "Español (España)",
     "languages-es_GT": "Español (Gwatemala)",
     "languages-es_MX": "Español (México)",
     "languages-es_PA": "Español (Panamá)",
-    "languages-es_PE": "Español (Perú)",
+    "languages-es_PE": "Hiszpański (Peru)",
     "languages-es_UY": "Hiszpański (Urugwaj)",
     "languages-eu_ES": "Euskera",
     "languages-fr_FR": "Francuski",
@@ -909,7 +909,7 @@
     "long": "Largo",
     "longitude": "Longitud",
     "longitude-abb": "Long",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Szukaj luk",
     "lot": "Lote",
     "low-security": "Baja seguridad",
     "machine": "Máquina",
@@ -928,10 +928,10 @@
     "manufacturers": "Producenci",
     "march": "Marzec",
     "margin": "Margen",
-    "margin-top": "Márgen superior",
+    "margin-top": "Margines górny",
     "mark-as-homepage": "Marcar como página de inicio",
     "marked-as-homepage": "Marcada como página de inicio. Pulsa de nuevo para desmarcar.",
-    "max-input-vars-warning": "Con la configuración actual de PHP (max_input_vars) no podrás trabajar con documentos de más de %numlines% líneas.",
+    "max-input-vars-warning": "Z aktualnym ustawieniem PHP (max_input_vars) nie będziesz mógł pracować z dokumentami większymi niż %numlines% linii.",
     "max-risk": "Riesgo máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
@@ -1027,7 +1027,7 @@
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Documento no editable",
     "none": "Ninguno",
-    "normal": "Normal",
+    "normal": "Normalny",
     "not-allowed-delete": "Nie masz uprawnień do usunięcia",
     "not-allowed-modify": "No tiene permiso para modificar",
     "not-enough-stock": "No hay suficiente stock de %reference%",
@@ -1074,7 +1074,7 @@
     "optional": "opcional",
     "options": "Opciones",
     "options-button-header": "Układ i uprawnienia",
-    "order": "Pedido",
+    "order": "Zamówienie",
     "order-email-subject": "Su pedido %code%",
     "order-email-text": "Dzień dobry, załączam Twoje zamówienie %code%",
     "orders": "Pedidos",
@@ -1132,7 +1132,7 @@
     "percentage-discount": "% Rabatu",
     "percentage-surcharge": "% R.E.",
     "percentage-vat": "% Podatek",
-    "period": "Periodo",
+    "period": "Okres",
     "personalized": "Personalizado",
     "phase": "Faza",
     "phone": "Telefon",
@@ -1204,7 +1204,7 @@
     "products": "Productos",
     "profile": "Profil",
     "profit-and-loss": "Pérdidas y Ganancias",
-    "profit-and-loss-balance": "Balance de Pérdidas y Ganancias",
+    "profit-and-loss-balance": "Bilans zysków i strat",
     "profits": "Zyski",
     "project": "Projekt",
     "projects": "Proyectos",
@@ -1269,14 +1269,14 @@
     "register-symbol": "#",
     "registered-installation": "Instalación registrada #%number%",
     "registered-installation-p": "Esta instalación ya ha sido registrada. Si tienes plugins de pago, pulsa el botón administrar para vincularlos y poder actualizar.",
-    "regularization-operation": "Regularización",
+    "regularization-operation": "Regulacja",
     "reject": "Odrzuć",
     "rejected": "Rechazado",
     "related": "Powiązane",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Recargando...",
-    "remove-filter": "Eliminar filtro",
+    "remove-filter": "Usuń filtr",
     "remove-from-list": "Quitar",
     "removing-logs-until": "Usuwanie logów do %date%",
     "renew": "Renovar",
@@ -1295,7 +1295,7 @@
     "report-non-grouping-account": "No agrupar por cuentas",
     "report-taxes-p": "Ten raport umożliwia uzyskanie rozliczenia podatków z faktur zakupu lub sprzedaży w wybranym zakresie",
     "reports": "Informes",
-    "request-sent": "Petición enviada",
+    "request-sent": "Prośba wysłana",
     "required": "Wymagane",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reservado",
@@ -1359,7 +1359,7 @@
     "sepa-suffix": "Przyrostek SEPA",
     "september": "Septiembre",
     "sequences": "Secuencias",
-    "serial-number": "Número de Serie",
+    "serial-number": "Numer seryjny",
     "serie": "Serie",
     "serieb": "Serie B",
     "serier": "Seria R",
@@ -1466,7 +1466,7 @@
     "supplier-delivery-note": "Albarán de Proveedor",
     "supplier-delivery-notes": "Albaranes de proveedores",
     "supplier-estimation": "Presupuesto de Proveedor",
-    "supplier-estimations": "Presupuestos de proveedores",
+    "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
     "supplier-invoice": "Factura de Proveedor",
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
@@ -1501,7 +1501,7 @@
     "tax-areas": "Obszary podatkowe",
     "tax-base": "Base Imponible",
     "tax-credit-account": "Cuenta de crédito para impuestos",
-    "tax-debit-account": "Cuenta de débito para impuestos",
+    "tax-debit-account": "Konto debetowe do podatków",
     "tax-transport": "Impuestos del transporte",
     "taxes": "Podatki",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
@@ -1531,7 +1531,7 @@
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Tytuł",
-    "title-font-size": "Tamaño fuente título",
+    "title-font-size": "Rozmiar czcionki tytułu",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
@@ -1548,7 +1548,7 @@
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
     "totals": "Całkowite",
-    "town": "Población",
+    "town": "Miejscowość",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
     "transfers": "Przesunięcia",
@@ -1558,7 +1558,7 @@
     "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Wtorek",
-    "type": "Tipo",
+    "type": "Typ",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
     "type-debug": "Tipo depurar",
@@ -1644,10 +1644,10 @@
     "wednesday": "Miércoles",
     "weeks": "Semanas",
     "weight": "Waga",
-    "which-logs-store": "Qué logs almacenar",
+    "which-logs-store": "Jakie logi przechowywać",
     "width": "Ancho",
     "wildcard": "Comodín",
-    "wildcard-general-info": "Se substituirá por el valor correspondiente",
+    "wildcard-general-info": "Zostanie zastąpiony odpowiednią wartością",
     "wildcard-title": "Zmienna zastępująca wartość",
     "without-closure": "Sin el cierre",
     "without-domicile": "Sin domiciliar",
