--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -308,7 +308,7 @@
     "controller": "Controlador",
     "controller-error": "Erro de Controlador",
     "controller-not-found": "Controlador não encontrado",
-    "conversion-rate": "Conversion rate",
+    "conversion-rate": "Taxa de conversão para €",
     "conversion-rate-not-0": "A taxa de conversão não pode ser 0.",
     "convert-into-customer": "Converte a cliente",
     "convert-into-supplier": "Converter em fornecedor",
@@ -408,7 +408,7 @@
     "default-role": "F",
     "default-tax": "Imposto padrão",
     "default-to-company-email": "Por defecto al email de la empresa",
-    "default-to-user-email": "Por defecto al email del usuario",
+    "default-to-user-email": "Por defeito para o email do usuário",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
     "delete-all": "Eliminar tudo",
@@ -435,7 +435,7 @@
     "desc-customer-name": "Nome pelo que chamamos ao  cliente. Para uso interno.",
     "desc-parent-family": "Indica se a família está agrupada em outro nível superior.",
     "desc-payment-days": "Exemplo: 1,15,31",
-    "desc-provicer-business-name-2": "Nome comercial do fornecedor Descriptio 2",
+    "desc-provicer-business-name-2": "Descrição do nome comercial do fornecedor 2",
     "desc-provider-business-name": "Descrição nome comercial do fornecedor",
     "desc-provider-name": "Nome do provedor de descrição",
     "desc-rate-code": "Código para uso interno da tarifa.",
@@ -508,7 +508,7 @@
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificação de email %name% não encontrada",
     "email-replies": "Respostas de e-mails",
-    "email-replies-to": "email-replies-to",
+    "email-replies-to": "As respostas a este e-mail irão para %email%",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
     "email-signature": "Assinatura de email",
@@ -518,7 +518,7 @@
     "employee": "Employee",
     "employees": "employees",
     "empty": "Vazio",
-    "empty-contact-data": "El contacto debe tener nombre o email o dirección",
+    "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
     "empty-ref-or-missing": "Referência vazia ou produto não encontrado",
     "enable": "Ativar",
     "enable-api": "Ativar API",
@@ -551,7 +551,7 @@
     "es_EC": "Espanhol (Equador)",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
+    "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
@@ -589,11 +589,11 @@
     "expense-subaccount": "expense-subaccount",
     "expenses": "Despesas",
     "expiration": "Expiração",
-    "expiration-type": "expiration-type",
+    "expiration-type": "Tipo de vencimento",
     "expired": "expirado",
     "expired-receipt": "R",
     "export": "exportar",
-    "export-bill": "export-bill",
+    "export-bill": "Fatura de exportação",
     "extra-file": "Arquivo extra",
     "failed": "Falha",
     "families": "Famílias",
@@ -682,7 +682,7 @@
     "generated-customer-groups": "0 grupos de clientes gerados.",
     "generated-customer-orders": "0 ordens de clientes geradas.",
     "generated-customers": "0 clientes gerados.",
-    "generated-families": "0 famílias geradas.",
+    "generated-families": "%quantity% famílias geradas.",
     "generated-invoice": "Fatura gerada",
     "generated-manufacturers": "0 fabricantes gerados.",
     "generated-products": "%quantity% produtos gerados",
@@ -690,11 +690,11 @@
     "generated-supplier": "0 fornecedor gerado.",
     "generated-supplier-delivery-notes": "%quantity% notas de entrega do fornecedor geradas.",
     "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
-    "generated-supplier-orders": "0 pedidos de fornecedores gerados.",
+    "generated-supplier-orders": "%quantity% pedidos de fornecedores gerados.",
     "global-dto": "global-dto",
     "global-dto-2": "Dto global 2",
     "greater-than": "Maior que",
-    "grid-help": "grid-help",
+    "grid-help": "Control + Enter para quebra de linha. Você pode mover ou excluir as linhas clicando no número da linha.",
     "group": "Grupo",
     "group-accounts": "group-accounts",
     "group-by-day": "Agrupar por dia",
@@ -752,7 +752,7 @@
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contábil padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
     "import-file": "Fichero de importación",
     "in-progress": "Em andamento",
-    "in-stock": "in-stock",
+    "in-stock": "Em estoque",
     "inactive": "Inativo",
     "income-and-expenses": "Income and Expenses",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
@@ -883,7 +883,7 @@
     "lines": "Linhas",
     "linux": "Linux",
     "list": "Lista",
-    "load-def-acc-plan": "load-def-acc-plan",
+    "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Carregando controlador: '%controllerName%'",
     "location": "Location",
     "lock-accounting": "Bloquear contabilidade",
@@ -920,7 +920,7 @@
     "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
-    "manage": "manage",
+    "manage": "Gerir",
     "manage-installation": "Administrar",
     "manual": "Manual",
     "manufacturer": "Fabricante",
@@ -992,7 +992,7 @@
     "my-profile": "Mi perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
-    "mysql-socket-p": "Este campo só é necessário em algumas hospedagens MySQL.",
+    "mysql-socket-p": "Este campo é necessário em algumas hospedagens com MySQL.",
     "name": "Nome",
     "name-or-business-name": "Nome ou Razão Social",
     "nature": "Natureza",
@@ -1043,7 +1043,7 @@
     "notice": "Aviso",
     "notices": "Avisos",
     "notification": "Notificación",
-    "notifications": "Notificaciones",
+    "notifications": "Notificações",
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de adjuntos",
@@ -1081,7 +1081,7 @@
     "origin": "origem",
     "origin-warehouse": "Armazém de origem",
     "original": "original",
-    "original-file": "Fichero original",
+    "original-file": "Arquivo original",
     "other-data": "Outros dados",
     "others-filters": "Outros filtros",
     "out-of-stock": "fora de stock",
@@ -1120,7 +1120,7 @@
     "payments": "Pagamentos",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
-    "pct-surcharge": "Surcharge rate",
+    "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pendente",
@@ -1163,7 +1163,7 @@
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "a",
     "plugins": "Plugins",
-    "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
+    "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
     "points": "points",
     "points-of-interest": "Pontos de interesse",
     "port": "Porta",
@@ -1200,7 +1200,7 @@
     "process": "Processo",
     "processing": "A processar",
     "product": "produtos",
-    "product-not-found": "Producto %ref% no encontrado",
+    "product-not-found": "Produto %ref% não encontrado",
     "products": "Produtos",
     "profile": "perfil",
     "profit-and-loss": "Profit and Loss",
@@ -1245,7 +1245,7 @@
     "record-deleted-correctly": "Registro excluído corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "Registro não encontrado",
-    "record-save-error": "An error occurred while saving the record",
+    "record-save-error": "Ocorreu um erro ao salvar os dados",
     "record-updated-correctly": "Registro atualizado corretamente!",
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "fatura retificada",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Registra a instalação do FacturaScripts",
     "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
     "register-installation": "register-installation",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
@@ -1332,7 +1332,7 @@
     "second-hand": "Segunda mão",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
-    "select": "select",
+    "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
@@ -1369,7 +1369,7 @@
     "service": "Serviço",
     "services": "Serviços",
     "settings": "Configurações",
-    "settlement": "settlement",
+    "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
     "setup-options": "Opções de configuração",
@@ -1397,9 +1397,9 @@
     "small": "Pequeno",
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
-    "social-security-number": "Social Security number",
+    "social-security-number": "Número de Segurança Social",
     "sort": "Ordenar",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Ordenar por coluna",
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referência asc.",
@@ -1418,11 +1418,11 @@
     "start-date": "Data de início",
     "start-hour": "Hora de início",
     "start-time": "Hora de início",
-    "starting-cron": "Iniciando cron para FacturaScripts ...",
+    "starting-cron": "Iniciando cron para FacturaScripts...",
     "state": "Estado",
     "states": "Estados",
     "status": "Status",
-    "status-document": "Documento de status",
+    "status-document": "Status do documento",
     "status-name-valid-length": "Nome do status inválido. Deve ter entre 1 e 20 caracteres.",
     "status-value-is-number": "El campo estado deve ser numérico.",
     "stock": "Estoque",
@@ -1442,7 +1442,7 @@
     "subaccount-irpf": "Conta para deduções",
     "subaccount-irpf-creditor": "Subconta de retenções para compras",
     "subaccount-not-found": "Subconta %subAccountCode% não encontrada.",
-    "subaccount-purchases": "Account for purchases",
+    "subaccount-purchases": "Conta para compras",
     "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
     "subaccount-sales": "Conta de vendas",
     "subaccounts": "Subcontas",
@@ -1459,7 +1459,7 @@
     "sunday": "domingo",
     "supplied": "abastecido",
     "supplied-amount": "quantidade-fornecida",
-    "supplied-subaccount-not-found": "supplied-subaccount-not-found",
+    "supplied-subaccount-not-found": "Subconta não encontrada",
     "supplier": "Fornecedor",
     "supplier-account-not-found": "supplier-account-not-found",
     "supplier-code": "Código do fornecedor",
@@ -1520,7 +1520,7 @@
     "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "Este último mês",
     "this-last-week": "A última semana",
-    "this-last-year": "this-last-year",
+    "this-last-year": "Os últimos 365 dias",
     "this-month": "Este mês",
     "this-week": "Esta semana",
     "this-year": "Este ano",
@@ -1601,7 +1601,7 @@
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
     "user-and-config": "Usuário e configuração",
-    "users": "Comercial",
+    "users": "Usuários",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando o Filecache",
     "using-memcache": "Usando Memcache",
