--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -308,7 +308,7 @@
     "controller": "Controlador",
     "controller-error": "Erro de Controlador",
     "controller-not-found": "Controlador não encontrado",
-    "conversion-rate": "Conversion rate",
+    "conversion-rate": "Taxa de conversão para €",
     "conversion-rate-not-0": "A taxa de conversão não pode ser 0.",
     "convert-into-customer": "Converte a cliente",
     "convert-into-supplier": "convert-to-supplier",
@@ -408,7 +408,7 @@
     "default-role": "F",
     "default-tax": "Imposto padrão",
     "default-to-company-email": "Por defecto al email de la empresa",
-    "default-to-user-email": "Por defecto al email del usuario",
+    "default-to-user-email": "Por defeito para o email do usuário",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
     "delete-all": "Eliminar tudo",
@@ -518,10 +518,10 @@
     "employee": "Employee",
     "employees": "employees",
     "empty": "Vazio",
-    "empty-contact-data": "El contacto debe tener nombre o email o dirección",
+    "empty-contact-data": "O contacto deve ter nome ou email ou endereço",
     "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
     "enable": "Ativar",
-    "enable-api": "Enable API",
+    "enable-api": "Ativar API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "ativado",
     "enabled-plugins": "Plugins activos",
@@ -538,7 +538,7 @@
     "error": "ERRO: 0",
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
-    "error-deleting-lines": "error-deleting-lines",
+    "error-deleting-lines": "Erro ao eliminar linhas",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
@@ -589,7 +589,7 @@
     "expense-subaccount": "expense-subaccount",
     "expenses": "Despesas",
     "expiration": "Expiração",
-    "expiration-type": "expiration-type",
+    "expiration-type": "Tipo de vencimento",
     "expired": "expired",
     "expired-receipt": "R",
     "export": "exportar",
@@ -605,7 +605,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Erro ao enviar o arquivo %fileName% porque a sua extensão não é permitida. As extensões permitidas são: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
     "file-not-found": "O arquivo 0 não foi encontrado.",
@@ -883,7 +883,7 @@
     "lines": "Linhas",
     "linux": "Linux",
     "list": "Lista",
-    "load-def-acc-plan": "load-def-acc-plan",
+    "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Controlador de carga: '0'",
     "location": "Location",
     "lock-accounting": "Bloquear contabilidade",
@@ -920,7 +920,7 @@
     "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
-    "manage": "manage",
+    "manage": "Gerir",
     "manage-installation": "Administrar",
     "manual": "Manual",
     "manufacturer": "Fabricante",
@@ -1017,7 +1017,7 @@
     "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "N",
-    "no-invoice": "no-invoice",
+    "no-invoice": "Sem fatura",
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
@@ -1091,7 +1091,7 @@
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Estas são as opções de formatação e permissões deste formulário ou lista. Podes modificar a ordem dos campos, ocultá-los, torná-los apenas de leitura ou aumentar o nível de privilégios. As alterações serão aplicadas ao utilizador selecionado.",
-    "page-total-amount": "page-total-amount",
+    "page-total-amount": "Total da página",
     "pagename": "Nome da página",
     "pages": "Páginas",
     "paid": "Pagado",
@@ -1104,7 +1104,7 @@
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
     "partnumber": "Número da peça",
-    "passenger": "Pasajero",
+    "passenger": "Passageiro",
     "password": "Senha",
     "pattern": "Padrão",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
@@ -1120,12 +1120,12 @@
     "payments": "Pagamentos",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
-    "pct-surcharge": "Surcharge rate",
+    "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pending",
     "pending-invoices-button": "Faturas Pendentes:",
-    "pending-orders-button": "pending-orders-button",
+    "pending-orders-button": "Ordens Ptes:",
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
     "percentage-commission": "% Comissão",
@@ -1159,11 +1159,11 @@
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
     "plugin-order": "O",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
-    "plugin-removal-disabled": "plugin-removal-disabled",
+    "plugin-removal-disabled": "A remoção de plugins está desativada neste servidor",
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "a",
     "plugins": "Plugins",
-    "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
+    "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
     "points": "points",
     "points-of-interest": "Pontos de interesse",
     "port": "Porta",
@@ -1200,7 +1200,7 @@
     "process": "Proceso",
     "processing": "A processar",
     "product": "produtos",
-    "product-not-found": "Producto %ref% no encontrado",
+    "product-not-found": "Produto %ref% não encontrado",
     "products": "Produtos",
     "profile": "perfil",
     "profit-and-loss": "Profit and Loss",
@@ -1245,7 +1245,7 @@
     "record-deleted-correctly": "Registro eliminado corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "Registro não encontrado",
-    "record-save-error": "An error occurred while saving the record",
+    "record-save-error": "Ocorreu um erro ao salvar os dados",
     "record-updated-correctly": "Registro atualizado corretamente!",
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "rectified-invoice",
@@ -1354,11 +1354,11 @@
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Enviou uma localização",
     "sent-a-picture": "Enviou uma imagem",
-    "sent-a-video": "Envió un video",
+    "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
     "sepa-suffix": "Sufixo SEPA",
     "september": "Septiembre",
-    "sequences": "sequences",
+    "sequences": "Sequências",
     "serial-number": "Número de Série",
     "serie": "Série",
     "serieb": "Série B",
@@ -1369,7 +1369,7 @@
     "service": "Serviço",
     "services": "Serviços",
     "settings": "Ajustes",
-    "settlement": "settlement",
+    "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
     "setup-options": "Opções de configuração",
@@ -1397,11 +1397,11 @@
     "small": "Pequeno",
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
-    "social-security-number": "Social Security number",
+    "social-security-number": "Número de Segurança Social",
     "sort": "Ordenar",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
     "sorted-asc": "Ordenado ascendente",
@@ -1442,7 +1442,7 @@
     "subaccount-irpf": "Conta para deduções",
     "subaccount-irpf-creditor": "sub-conta de retenção para compras",
     "subaccount-not-found": "Subconta 0 não encontrado.",
-    "subaccount-purchases": "Account for purchases",
+    "subaccount-purchases": "Conta para compras",
     "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Subcontas",
@@ -1459,10 +1459,10 @@
     "sunday": "domingo",
     "supplied": "Suprido",
     "supplied-amount": "quantidade-fornecida",
-    "supplied-subaccount-not-found": "supplied-subaccount-not-found",
+    "supplied-subaccount-not-found": "Subconta não encontrada",
     "supplier": "Fornecedor",
     "supplier-account-not-found": "supplier-account-not-found",
-    "supplier-code": "supplier-code",
+    "supplier-code": "Cód. Fornecedor",
     "supplier-delivery-note": "Nota de Entrega de Fornecedor",
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
     "supplier-estimation": "Estimativa de Fornecedor",
@@ -1595,7 +1595,7 @@
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
-    "uploaded-at": "Uploaded at",
+    "uploaded-at": "Carregado em",
     "url": "Local na rede Internet",
     "use-gaps": "Usar intervalos",
     "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
@@ -1649,7 +1649,7 @@
     "wildcard": "Curinga",
     "wildcard-general-info": "Será substituído pelo valor correspondente",
     "wildcard-title": "Curingas substituíveis por valor",
-    "without-closure": "without-closure",
+    "without-closure": "Sem o fechamento",
     "without-domicile": "Sem domicílio",
     "without-groups": "Sem grupo",
     "without-regularization": "Sem regularização",
