--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -154,7 +154,7 @@
     "banking-movements": "Moviments bancaris",
     "barcode": "Còdic de barres",
     "bcc": "CCO",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Fes-te patrocinador",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
@@ -750,7 +750,7 @@
     "import": "import",
     "import-accounting-plan": "Importar el pla contable",
     "import-accounting-plan-p": "Deixa este camp en blanc per a utilitzar el pla contable predeterminat o bé seleccioneu un fitxer al vostre pla contable personalitzat.",
-    "import-file": "Fichero de importación",
+    "import-file": "Fitxer d'importació",
     "in-progress": "En progrés",
     "in-stock": "En estoc",
     "inactive": "inactive",
@@ -776,7 +776,7 @@
     "invalid-column-lenght": "La columna %column% ha de tindre entre %min% i %max% caràcters.",
     "invalid-date": "%date% no és una data vàlida.",
     "invalid-date-there-are-invoices-after": "Data no vàlida: %date%. La factura %other% és posterior i tanmateix té data anterior: %other-date%. Tota factura ha de tindre una data anterior o igual a la següent.",
-    "invalid-date-there-are-invoices-before": "Data no vàlida. La data %date% és posterior a la data de la factura següent.",
+    "invalid-date-there-are-invoices-before": "Data no vàlida: %date%. La factura %other% és anterior a aquesta i tanmateix té data posterior: %other-date%. Tota factura ha de tindre una data anterior o igual a la següent.",
     "invalid-iban": "IBAN no vàlid: %iban%",
     "invalid-iso-code": "Código ISO '%iso-code%' no vàlid",
     "invalid-number": "invalid-number",
@@ -812,7 +812,7 @@
     "items-removed-correctly": "%num% elements eliminats correctament",
     "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
     "ivasop-account-not-found": "ivasop-account-not-found",
-    "january": "Enero",
+    "january": "Gener",
     "job-name": "Nom del treball",
     "journal": "Diari",
     "journal-closing": "DIari de tancament",
@@ -846,7 +846,7 @@
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polonès",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pt_BR": "Portuguès (Brasil)",
     "languages-pt_PT": "Portugués",
     "languages-va_ES": "Valencià",
     "last-activity": "Última activitat",
@@ -967,12 +967,12 @@
     "model-not-found": "El model %model% no s'ha trobat",
     "monday": "monday",
     "month": "Mes",
-    "month-1": "Enero",
+    "month-1": "Gener",
     "month-10": "Octubre",
     "month-11": "Novembre",
     "month-12": "Desembre",
     "month-2": "Febrer",
-    "month-3": "Marzo",
+    "month-3": "Març",
     "month-4": "Abril",
     "month-5": "Maig",
     "month-6": "Juny",
@@ -1138,7 +1138,7 @@
     "phone": "Teléfon",
     "phone2": "Teléfon 2",
     "phones": "Teléfons",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "Es requereix l'extensió %extension% en la configuració de PHP",
     "php-extension-not-found": "No tens instalada l'extensió PHP %extension%.",
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
     "physical-stock": "Estoc físic",
@@ -1212,7 +1212,7 @@
     "province": "Província",
     "provinces": "Províncies",
     "public": "Públic",
-    "public-key": "Clave pública",
+    "public-key": "Clau pública",
     "purchase-rate": "Taxa de compra",
     "purchased-quantity": "purchased-quantity",
     "purchases": "Compres",
@@ -1232,7 +1232,7 @@
     "rates": "Tarifes",
     "re": "RE",
     "re-open": "Reobrir",
-    "react": "Reaccionar",
+    "react": "Reactiva",
     "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Només lectura",
@@ -1284,7 +1284,7 @@
     "renumber-accounting": "Renumerar els assentaments",
     "renumber-accounting-error": "S'ha produït un erro durant la renumeració dels assentaments de l'eixercici fiscal %exerciseCode%",
     "renumber-accounting-ok": "La renumeració dels assentamens ha acabat",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-accounting-p": "Renumera els asientos per data, de menor a major",
     "renumber-invoices-p": "Renumera les factures en base a la data, de menor a major",
     "renumber-invoices-success": "Les factures de l'exercici '%exercise%' han sigut renumerades correctament",
     "repeat-new-password": "Repetix la contrasenya",
@@ -1345,7 +1345,7 @@
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
-    "send-location": "Enviar ubicación",
+    "send-location": "Enviar ubicació",
     "send-mail": "Enviar el correu",
     "send-mail-error": "Hi ha hagut un erro a l'enviar el correu",
     "send-mail-ok": "El correu s'ha enviar correctament",
@@ -1531,7 +1531,7 @@
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
-    "title-font-size": "Mida font títol",
+    "title-font-size": "Mida de font títol",
     "title-url": "Títul (URL)",
     "to": "Per a",
     "to-refund": "A devolver",
@@ -1594,7 +1594,7 @@
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
-    "upload-file": "Subir archivo",
+    "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat el",
     "url": "Lloc Web",
     "use-gaps": "Usar buits",
@@ -1629,7 +1629,7 @@
     "version": "Versió",
     "video": "Vídeo",
     "vies-check-success": "El número '%vat-number%' està registrat en el sistema VIES",
-    "view-api": "Ver API",
+    "view-api": "Veure API",
     "view-column-net-subtotal": "Veure columna subtotal o net",
     "view-estimation": "V",
     "view-order": "Veure comanda",
