--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -154,7 +154,7 @@
     "banking-movements": "Banking movements",
     "barcode": "Barcode",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Become a sponsor",
     "big": "Big",
     "billing": "Billing",
     "billing-address": "Billing address",
@@ -1262,8 +1262,8 @@
     "refund-payment-concept": "Refund of payment %document%",
     "refunds": "Refunds",
     "register": "Register",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad": "Register the installation of FacturaScripts",
+    "register-install-ad-p": "If you register the installation of FacturaScripts, you will receive 1 month of PRO sponsorship, which allows you to download one of our exclusive plugins. It also helps us gather statistics on core and PHP versions.",
     "register-installation": "Register installation",
     "register-installation-p": "Register your installation to be able to update paid or private plugins.",
     "register-symbol": "#",
@@ -1591,8 +1591,8 @@
     "update-time": "Update time",
     "updated-model": "Updated %model% (%key%) %desc%",
     "updater": "Updater",
-    "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available": "Updates Available",
+    "updates-available-p": "There are updates available for FacturaScripts. Please click on the updater and download the new version. Updates fix bugs and add new features.",
     "updating-attached-relations": "Updating attached file counters",
     "upload-file": "Upload file",
     "uploaded-at": "Uploaded at",
